--- a/PorteFolio/Photos/templates/add_photo.html
+++ b/PorteFolio/Photos/templates/add_photo.html
@@ -2,9 +2,9 @@
 {% block content %}
 {% load static %}
 <div class="container">
- <div class="form-container">
-    <form method="post" enctype="multipart/form-data">
+  <div class="form-container">
       <h4 id="id_add_photo_h4">Ajouter une photo</h4>
+      <form method="post" enctype="multipart/form-data">
       <div class="form-row">
         <label for="{{ photo_form.title.id_for_label }}">Titre :</label>
         {{ photo_form.title }}
@@ -13,10 +13,11 @@
         <label for="{{ photo_form.description.id_for_label }}">Description:</label>
         {{ photo_form.description }}
       </div>
-      <div class="form-row">
+      <div class="form-row ">
         <label for="file-upload">Image:</label>
-        <input type="file" id="add-img" name="image" class="upload-button" onchange="previewImage(this)">
         <img id="image-preview" class="preview-image" src="" alt=''>
+          <output id="image-output"></output>
+          <input type="file" id="edit-img" name="image" class="upload-button">
       </div>
       {% csrf_token %}
       <button type="submit" class="submit-button">Envoyer</button>
@@ -24,4 +25,4 @@
   </div>
 </div>
 <script src="{% static 'js/img_preview.js' %}"></script>
-{% endblock content %}
+{% endblock %}
