--- a/PorteFolio/Photos/templates/edit_photo.html
+++ b/PorteFolio/Photos/templates/edit_photo.html
@@ -16,7 +16,7 @@
         {{ edit_form.description }}
       </div>
       <div class="form-row">
-        <label for="thumbnail">Aperçu:</label>
+        <label for="thumbnail">Aperçu de l'image actuelle:</label>
           {% if photo.thumbnail %}
             <img src="{{ photo.thumbnail.url }}" alt="{{ photo.title }}" class="thumbnail-image">
           {% else %}
@@ -25,11 +25,16 @@
       </div>
       <div class="form-row image-row">
         <img id="image-preview" class="preview-image" src="" alt="">
+        <output id="image-output"></output>
       </div>
       <div class="form-row">
-        <input type="file" id="edit-img" name="image" class="upload-button" onchange="previewImage(this)">
-        <label for="delete-media">Supprimer l'image ?</label>
+        <input type="file" id="edit-img" name="image" class="upload-button">
+        {% if photo.image %}
+        <label for="delete-media">
         <input type="checkbox" name="delete_media" id="delete-media">
+        Supprimer l'image ?
+        </label>
+        {% endif %}
       </div>
       {% csrf_token %}
       <button type="submit" name="edit_photo" class="submit-button">Envoyer</button>
