--- a/PorteFolio/static/css/base.css
+++ b/PorteFolio/static/css/base.css
@@ -1,3 +1,21 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.background-container {
+  width: 80%;
+  margin: 0 auto;
+  min-height: 200vh;
+  position: relative;
+  border-left: 10px solid rgba(128, 128, 128, 0.5);
+  border-right: 10px solid rgba(128, 128, 128, 0.5);
+  box-shadow: -10px 0px 10px rgba(128, 128, 128, 0.5), 10px 0px 10px rgba(128, 128, 128, 0.5);
+  background: linear-gradient(to bottom, #FCEAC7, rgba(128, 128, 0, 0.5));
+}
+
+
+
 .sidebar_left {
   width: 200px;
   height: 100vh;
@@ -7,6 +25,9 @@
   transition: left 0.3s ease-in-out;
   background-color: #C8E6C9;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-all;
 }
 
 .sidebar_left.active {
@@ -15,8 +36,8 @@
 
 .arrow_left {
   position: fixed;
-  top: 50%;
-  left: -20px;
+  top: 20%;
+  left: -15px;
   transform: translateY(-50%);
   width: 40px;
   height: 40px;
@@ -112,7 +133,23 @@
   cursor: pointer;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  font-family: sans-serif;
+  font-weight: normal;
+  font-size: 16px;
+  text-decoration: none;
+  color: inherit;
 }
+
+.submit-button:hover,
+.submit-button:focus {
+  color: inherit;
+  outline: none;
+}
+
+.submit-button:active {
+  color: inherit;
+}
+
 
 #id_add_photo_h4 {
   text-align: center;
@@ -160,8 +197,8 @@
 
 .arrow_right {
   position: fixed;
-  top: 50%;
-  right: -20px;
+  top: 20%;
+  right: -10px;
   transform: translateY(-50%);
   width: 40px;
   height: 40px;
@@ -215,3 +252,6 @@
   overflow: hidden;
 }
 
+#username {
+font-size: 12px;
+}
