--- a/PorteFolio/templates/base.html
+++ b/PorteFolio/templates/base.html
@@ -10,30 +10,30 @@
     <script src="{% static 'js/sidebar.js' %}"></script>
 </head>
 <body>
+  <div class="background-container">
+    <div class="sidebar_left" id="sidebar_left">
+        <h2>Menu</h2>
+        <p class="menu">
+            <a href="{% url 'home' %}">Home</a>
+            <a href="{% url 'add_photo' %}">Ajouter</a>
+            <a href="{% url 'logout' %}">Se déconnecter</a>
+            <span id="username">Logué en tant que: {{user.email}}</span>
+        </p>
+    </div>
+    <div class="arrow_left" id="arrow_left"></div>
 
-<div class="sidebar_left" id="sidebar_left">
-    <h2>Menu</h2>
-    <p class="menu">
-        <a href="{% url 'home' %}">Home</a>
-        <a href="{% url 'add_photo' %}">Ajouter</a>
-        <a href="{% url 'logout' %}">Se déconnecter</a>
-        <span id="username">Logué en tant que: {{user.email}}</span>
-    </p>
-</div>
-<div class="arrow_left" id="arrow_left"></div>
-
-<div class="sidebar_right" id="sidebar_right">
-  <h2>Menu</h2>
-  <p class="menu-right">
-    <a href="#">Option 1</a>
-    <a href="#">Option 2</a>
-    <a href="#">Option 3</a>
-  </p>
-</div>
-<div class="arrow_right" id="arrow_right"></div>
+    <div class="sidebar_right" id="sidebar_right">
+      <h2>Menu</h2>
+      <p class="menu-right">
+        <a href="#">Option 1</a>
+        <a href="#">Option 2</a>
+        <a href="#">Option 3</a>
+      </p>
+    </div>
+    <div class="arrow_right" id="arrow_right"></div>
 
  {% block content %}
 {% endblock content %}
-
+  </div>
 </body>
 </html>
