adding JS script

--- a/PorteFolio/templates/base.html
+++ b/PorteFolio/templates/base.html
@@ -6,8 +6,7 @@
 {% load static %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="{% static 'js/sidebar.js' %}"></script>
+
 </head>
 <body>
   <div class="background-container">
@@ -25,7 +24,7 @@
     <div class="sidebar_right" id="sidebar_right">
       <h2>Menu</h2>
       <p class="menu-right">
-        <a href="#">Option 1</a>
+        <a href="{% url 'upload_ifc' %}">Upload un IFC</a>
         <a href="#">Option 2</a>
         <a href="#">Option 3</a>
       </p>
@@ -35,5 +34,7 @@
  {% block content %}
 {% endblock content %}
   </div>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="{% static 'js/sidebar.js' %}"></script>
 </body>
 </html>
