--- a/PorteFolio/static/css/base.css
+++ b/PorteFolio/static/css/base.css
@@ -14,8 +14,6 @@ body {
   background: linear-gradient(to bottom, #FCEAC7, rgba(128, 128, 0, 0.5));
 }
 
-
-
 .sidebar_left {
   width: 200px;
   height: 100vh;
@@ -92,13 +90,16 @@ body {
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  height: 100%;
 }
+
 .form-row {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin-bottom: 10px;
 }
+
 .container form {
   border: 2px solid grey;
   border-radius: 10px;
@@ -135,10 +136,8 @@ body {
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   font-family: sans-serif;
-  font-weight: normal;
   font-size: 16px;
   text-decoration: none;
-  color: inherit;
 }
 
 .submit-button:hover {
@@ -156,7 +155,6 @@ body {
   color: inherit;
 }
 
-
 #id_add_photo_h4 {
   text-align: center;
   margin-left: auto;
@@ -164,7 +162,8 @@ body {
   width: 200px;
 }
 
-.data-form {
+.data-form,
+.data-result {
   overflow: hidden;
   background-color: #DCDCDC;
 }
@@ -180,10 +179,6 @@ body {
 .preview-image {
   max-width: 300px;
   max-height: 300px;
-}
-
-.image-row {
-  margin-top: 10px;
 }
 
 .sidebar_right {
@@ -251,7 +246,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   padding: 0 20px;
   box-sizing: border-box;
   max-width: 100%;
@@ -259,6 +253,5 @@ body {
 }
 
 #username {
- font-size: 12px;
+  font-size: 12px;
 }
-
