--- a/PorteFolio/static/css/result.css
+++ b/PorteFolio/static/css/result.css
@@ -1,72 +1,69 @@
-/* Styles existants inchangés */
-.tree ul {
-    list-style: none;
-    padding-left: 20px;
-}
-
-.tree li {
-    position: relative;
-    padding-left: 1rem;
-    margin-bottom: 8px;
-}
-
-.tree label {
-    cursor: pointer;
-}
-
-.tree input[type="checkbox"] {
-    position: absolute;
-    opacity: 0;
-}
-
-.tree input[type="checkbox"] + label:before {
-    content: "\2610";
-    margin-right: 5px;
-}
-
-.tree input[type="checkbox"]:checked + label:before {
-    content: "\2611";
-}
-
-.tree input[type="checkbox"] + label + ul {
-    max-height: 0;
-    overflow: hidden;
-    opacity: 0;
-    transition: max-height 0.2s ease-out, opacity 0.2s ease-out;
-}
-
-.tree input[type="checkbox"]:checked + label + ul {
-    max-height: 1000px; /* Set a large enough value to accommodate your content */
-    opacity: 1;
-    transition: max-height 0.5s ease-in, opacity 0.5s ease-in;
-}
-
-/* Ajoutez le CSS nécessaire dans le fichier où vous avez vos autres styles */
-.data-item {
-  margin-bottom: 10px;
-}
-
-.data-item label {
+/* Styles pour les icônes de déploiement */
+.tree .toggle-icon {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  font-size: 14px; /* Taille de police par défaut */
+  line-height: 20px;
+  margin-right: 5px;
   cursor: pointer;
 }
 
-.data-details {
-  display: none;
-  /* Ajoutez d'autres styles pour formater les détails dépliés si nécessaire */
+/* Styles pour le "-" lorsque le sous-menu est déployé */
+.tree .toggle-icon:not(.expanded) {
+  content: "-";
+  font-size: 18px; /* Taille de police lorsque le sous-menu est déployé pour le "-" */
+}
+
+/* Masquer les sous-menus par défaut */
+.tree ul {
+  list-style: none;
+  padding-left: 20px;
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
+}
+
+/* Augmenter la hauteur et l'opacité des éléments déployés */
+.tree ul.expanded {
+  max-height: max-content;
+  opacity: 1;
+  transition: max-height 0.5s ease-in, opacity 0.5s ease-in;
+}
+
+/* Ajouter de l'espace entre les éléments déployés pour éviter le chevauchement */
+.tree ul ul {
+  margin-top: 2px;
 }
 
 /* Nouvelle classe pour la largeur plus étroite */
 .data-result {
   display: flex;
   flex-direction: column;
-  max-width: 40%;
-  margin: 0 auto; /* Ajoutez cette ligne pour centrer horizontalement */
-  max-height: 60vh; /* Définissez la hauteur maximale souhaitée pour l'affichage initial */
+  margin: 0 auto;
   overflow-y: auto;
-  padding: 0px;
+  min-width: 500px;
 }
 
-/* Nouvelle classe pour le conteneur d'entité */
-.entity-container {
-  margin-bottom: 10px;
+/* Styles pour la checkbox */
+.tree .toggle-checkbox {
+  margin-right: 5px;
+}
+
+.entity-container ul {
+  display: none;
+}
+.entity-container.expanded ul {
+  display: block;
+}
+
+.tree .toggle-icon.selected {
+  font-size: 24px; /* Changez cela à la taille de police désirée */
+}
+
+.toggle-container {
+  display: flex;
+  align-items: flex-start;
 }
