--- a/PorteFolio/templates/base.html
+++ b/PorteFolio/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="fr" xmlns="http://www.w3.org/1999/html">
 <head>
 <meta charset=UTF-8>
-<title>Blog Photos</title>
+<title>Porte-Folio</title>
 {% load static %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" href="{% static 'css/base.css' %}">
@@ -11,7 +11,7 @@
 <body>
   <div class="background-container">
     <div class="sidebar_left" id="sidebar_left">
-        <h2>Menu</h2>
+        <h2>Blog Photos</h2>
         <p class="menu">
             <a href="{% url 'home' %}">Home</a>
             <a href="{% url 'add_photo' %}">Ajouter</a>
@@ -22,15 +22,14 @@
     <div class="arrow_left" id="arrow_left"></div>
 
     <div class="sidebar_right" id="sidebar_right">
-      <h2>Menu</h2>
+      <h2>IFC</h2>
       <p class="menu-right">
-        <a href="{% url 'upload_ifc' %}">Upload un IFC</a>
-        <a href="#">Option 2</a>
+        <a href="{% url 'upload_ifc' %}">Parcourir un IFC</a>
+        <a href="{% url 'extract_ifc' %}">Extraire la géométrie</a>
         <a href="#">Option 3</a>
       </p>
     </div>
     <div class="arrow_right" id="arrow_right"></div>
-
  {% block content %}
 {% endblock content %}
   </div>
