--- a/PorteFolio/templates/base.html
+++ b/PorteFolio/templates/base.html
@@ -26,7 +26,7 @@
       <p class="menu-right">
         <a href="{% url 'upload_ifc' %}">Parcourir un IFC</a>
         <a href="{% url 'extract_ifc' %}">Extraire la géométrie</a>
-        <a href="#">Option 3</a>
+        <a href="{% url 'preview_ifc' %}">Preview 3D</a>
       </p>
     </div>
     <div class="arrow_right" id="arrow_right"></div>
