--- a/PorteFolio/IFCextract/templates/preview.html
+++ b/PorteFolio/IFCextract/templates/preview.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{% static 'css/preview.css' %}">
 <div class="container">
   <div>
-      <h4>Résultats</h4>
+      <h4>Rendu:</h4>
       <input type="hidden" id="ifcUrl" value="{{ ifc_url }}">
       <canvas id="three-container"></canvas>
   </div>
