--- a/PorteFolio/templates/base.html
+++ b/PorteFolio/templates/base.html
@@ -6,7 +6,7 @@
 {% load static %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" href="{% static 'css/base.css' %}">
-
+<link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
   <div class="background-container">
