--- a/PorteFolio/static/css/preview.css
+++ b/PorteFolio/static/css/preview.css
@@ -1,6 +1,6 @@
 #three-container {
     width: 100%;
-    height: 400px; // Vous pouvez ajuster cette valeur
+    height: 800px;
     overflow: hidden;
     position: relative;
     top: 0;
