--- a/PorteFolio/IFCextract/templates/preview.html
+++ b/PorteFolio/IFCextract/templates/preview.html
@@ -1,11 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
+<script>
+ var ifc_path = "{{ ifc_path }}";
+</script>
 <link rel="stylesheet" href="{% static 'css/preview.css' %}">
 <div class="container">
-        <h4>Rendu:</h4>
-        <input type="hidden" id="ifcUrl" value="{{ ifc_url }}">
-        <div id="three-container"></div>
+    <h4>Rendu:</h4>
+    <input type="hidden" id="ifcUrl" value="{{ ifc_url }}">
+    <div id="three-container"></div>
+    <textarea id="object_details"></textarea>
 </div>
 <script src="{% static 'dist/bundle.js' %}"></script>
 {% endblock %}
