--- a/PorteFolio/templates/base.html
+++ b/PorteFolio/templates/base.html
@@ -24,9 +24,9 @@
     <div class="sidebar_right" id="sidebar_right">
       <h2>IFC</h2>
       <p class="menu-right">
-        <a href="{% url 'upload_ifc' %}">Parcourir un IFC</a>
-        <a href="{% url 'extract_ifc' %}">Extraire la géométrie</a>
-        <a href="{% url 'preview_ifc' %}">Preview 3D</a>
+          <a href="{% url 'preview_ifc' %}">Preview 3D</a>
+          <a href="{% url 'upload_ifc' %}">Parcourir le contenu d'un IFC</a>
+          <a href="{% url 'extract_ifc' %}">Export CSV géométrie</a>
       </p>
     </div>
     <div class="arrow_right" id="arrow_right"></div>
