--- a/PorteFolio/static/css/base.css
+++ b/PorteFolio/static/css/base.css
@@ -239,10 +239,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+    text-align: right;
 }
 
 .menu-right a {
-  display: block;
   margin-bottom: 10px;
 }
 
