Renvoi du message d'erreur

--- a/PorteFolio/IFCextract/templates/error_file.html
+++ b/PorteFolio/IFCextract/templates/error_file.html
@@ -6,6 +6,7 @@
       <h4 id="id_add_photo_h4">Erreur à coder</h4>
       <div class="form-row">
           <p>a href à renvoyer vers accueuil ou tempo</p>
+          <p>Erreur: {{ error_message }}</p>
       </div>
   </div>
 </div>
