--- a/PorteFolio/IFCextract/templates/preview.html
+++ b/PorteFolio/IFCextract/templates/preview.html
@@ -5,8 +5,8 @@
  var ifc_path = "{{ ifc_path }}";
 </script>
 <link rel="stylesheet" href="{% static 'css/preview.css' %}">
-<div class="container">
-    <h4>Rendu:</h4>
+<h4>Rendu:</h4>
+<div class="preview-container">
     <input type="hidden" id="ifcUrl" value="{{ ifc_url }}">
     <div id="three-container"></div>
     <textarea id="object_details"></textarea>
